# greentic-mcp

./: Cargo.toml  README.md
.github/workflows/: auto-tag.yml  publish.yml  rust-ci.yml
ci/: local_check.sh
crates/greentic-types/: Cargo.toml
crates/greentic-types/src/: tenant.rs
crates/mcp-component/: Cargo.toml
crates/mcp-component/src/: lib.rs
crates/mcp-exec/: Cargo.toml  README.md
crates/mcp-exec/src/: config.rs  describe.rs  error.rs  lib.rs  resolve.rs  runner.rs  store.rs  verify.rs
crates/mcp-exec/tests/: echo_wasm_smoke.rs  offline_mock.rs  online_weather.rs
greentic-mcp/: ABI.md  Cargo.toml  README.md  build.rs
greentic-mcp/src/: config.rs  executor.rs  lib.rs  retry.rs  test_tools.rs  tool_map.rs  types.rs
greentic-mcp/tests/: integration_echo.rs  integration_echo_wasm.rs
greentic-mcp/tests/fixtures/echo_tool/: Cargo.toml
greentic-mcp/tests/fixtures/echo_tool/src/: lib.rs
greentic-mcp/tests/fixtures/echo_tool/wit/: tool.wit
greentic-mcp/tests/wasm/echo_tool/: Cargo.toml
greentic-mcp/tests/wasm/echo_tool/src/: lib.rs
greentic-mcp/tests/wasm/echo_tool/wit/: tool.wit
