[package]
name = "greentic-mcp"
version.workspace = true
edition = "2024"
license = "MIT"
description = "MCP ToolMap + WASIX/WASI executor bridge"
repository = "https://github.com/agentic/greentic-mcp"
readme = "README.md"

[features]
default = ["wasi", "describe-v1", "runner-host-v1"]
wasi = []
describe-v1 = ["greentic-interfaces/describe-v1"]
runner-host-v1 = ["greentic-interfaces/runner-host-v1"]

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
greentic-types.workspace = true
greentic-interfaces.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "greentic_mcp"
path = "src/lib.rs"
